# sovereign-agentops

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.community  Makefile  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
architecture/: index.html
changelog/: index.html
cli/: receipt-verify.py
community/: index.html
configuration/: index.html
docs/: architecture.md  changelog.md  community.md  configuration.md  index.md  security-model.md
examples/: hello.txt  signed-receipt.json  workspace-policy.yaml
search/: search_index.json
security-model/: index.html
sovereign_agentops_community.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_json_rpc.py  test_mcp_server.py
tools/: README.md  mcp-server.py  mcp_server.py  requirements.txt
