[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-agentops-community"
version = "2.0.0"
description = "Runtime-agnostic governed agent execution — Community Edition"
readme = "README.md"
license = {text = "Apache-2.0"}

[tool.setuptools.license-files]
paths = ["LICENSE.community"]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/geludobre/sovereign-agentops"
Documentation = "https://github.com/geludobre/sovereign-agentops/tree/main/community/docs"
Source = "https://github.com/geludobre/sovereign-agentops"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["tools"]
omit = ["tests/*"]
